// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generator - java source api addItemsToJavaEnumFile should match file content 1`] = `
{
  "src/main/java/com/exampla/Test.java": {
    "contents": "package com.example;
public enum Test {
    VALUE,
    VALUE_WITH_PARAMS(1, "value");
    // jhipster-needle-add-item-to-enum - JHipster will add new enum values here
}
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - java source api addItemsToJavaEnumFile with existing value to a inner enum should match file content 1`] = `
{
  "src/main/java/com/exampla/Test.java": {
    "contents": "package com.example;
public class Test {
    public static enum TestEnum {
        EXISTING_VALUE,
        VALUE,
        VALUE_WITH_PARAMS(1, "value");
        // jhipster-needle-add-item-to-enum - JHipster will add new enum values here
    }
}
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - java source api editJavaFile with springBeans should match file content snapshot 1`] = `
{
  "src/main/java/com/exampla/Test.java": {
    "contents": "package com.example;
import com.example.BeanClass;
public class Test {
    private final BeanClass beanName;

    public Test(BeanClass beanName) {
        this.beanName = beanName;
}
}
",
    "stateCleared": "modified",
  },
}
`;

exports[`generator - java with default config should match files snapshot 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/GeneratedByJHipster.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Authority.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/package-info.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AssertUtils.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/AuthorityTestSamples.java": {
    "stateCleared": "modified",
  },
}
`;
